[gd_scene load_steps=2 format=3 uid="uid://cg64bpgarmdh5"]

[ext_resource type="Script" path="res://Scenes/multiplayerController.gd" id="1_7m70b"]

[node name="Multiplayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -17.0
offset_top = -15.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7m70b")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 186.0
offset_top = 82.0
offset_right = 255.0
offset_bottom = 122.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 69.0
offset_top = 84.0
offset_right = 136.0
offset_bottom = 122.0
text = "Join"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 292.0
offset_top = 83.0
offset_right = 385.0
offset_bottom = 119.0
text = "Start game"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 142.0
offset_top = 28.0
offset_right = 396.0
offset_bottom = 59.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 65.0
offset_top = 30.0
offset_right = 157.0
offset_bottom = 53.0
text = "Name"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
